# cdl_paper_generator

./: .gitignore  Pipfile  README.md  gen.py  pyproject.toml  style.css
